test/visibility/empty/exceptEverything.good
exceptEverything.chpl:13: In function 'main':
exceptEverything.chpl:17: error: unresolved call 'foo()'
exceptEverything.chpl:17: note: because no functions named foo found in scope
