test/visibility/empty/exceptEverything.compopts
                        # exceptEverything.good
-squalifiedAccess=true  # exceptEverything-qual.good
